[gd_scene load_steps=7 format=3 uid="uid://bjn1t42i545xo"]

[ext_resource type="Texture2D" uid="uid://ddxkg65btfhri" path="res://assets/background/sky.png" id="1_8dusn"]
[ext_resource type="Script" path="res://scenes/options_menu/options_menu.gd" id="1_e0wtb"]
[ext_resource type="LabelSettings" uid="uid://bq5xhlkixkxwt" path="res://assets/theme_settings/lg_label_red_72.tres" id="3_cuyk0"]
[ext_resource type="PackedScene" uid="uid://bsb2whjs7vxxa" path="res://scenes/options_menu/ui_nodes/slider_menu_option.tscn" id="4_he4bh"]
[ext_resource type="Theme" uid="uid://befyu3yimmr3x" path="res://assets/theme_settings/ia_button_32.tres" id="5_h3vay"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bs0rt"]

[node name="OptionsMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e0wtb")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_8dusn")
expand_mode = 1

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MC"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Title" type="Label" parent="MC/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Settings"
label_settings = ExtResource("3_cuyk0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXVolumeSlider" parent="MC/VBoxContainer" instance=ExtResource("4_he4bh")]
layout_mode = 2
show_percentage = true
title = "SFX VOLUME"

[node name="MusicVolumeSlider" parent="MC/VBoxContainer" instance=ExtResource("4_he4bh")]
layout_mode = 2
show_percentage = true
title = "MUSIC VOLUME"

[node name="BackButton" type="Button" parent="MC/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme = ExtResource("5_h3vay")
theme_override_colors/font_color = Color(0.819608, 0.235294, 0.113725, 1)
theme_override_colors/font_pressed_color = Color(0.564188, 0.243923, 0, 1)
theme_override_colors/font_hover_color = Color(0.939447, 0.299548, 0.169232, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_bs0rt")
theme_override_styles/hover = SubResource("StyleBoxEmpty_bs0rt")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_bs0rt")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bs0rt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_bs0rt")
text = "BACK"

[node name="ExitButton" type="Button" parent="MC/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme = ExtResource("5_h3vay")
theme_override_colors/font_color = Color(0.819608, 0.235294, 0.113725, 1)
theme_override_colors/font_pressed_color = Color(0.564188, 0.243923, 0, 1)
theme_override_colors/font_hover_color = Color(0.939447, 0.299548, 0.169232, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_bs0rt")
theme_override_styles/hover = SubResource("StyleBoxEmpty_bs0rt")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_bs0rt")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bs0rt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_bs0rt")
text = "EXIT GAME"

[connection signal="value_changed" from="MC/VBoxContainer/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="value_changed" from="MC/VBoxContainer/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="pressed" from="MC/VBoxContainer/BackButton" to="." method="go_back"]
[connection signal="pressed" from="MC/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
